kubernetes/yaml/canary/04argorollout/bluegreen/green.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-bluegreen
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollout-bluegreen-green
  template:
    metadata:
      labels:
        app: rollout-bluegreen-green
    spec:
      containers:
      - name: rollouts-demo-green
        image: argoproj/rollouts-demo:green
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    blueGreen: 
      activeService: rollout-bluegreen-green
      autoPromotionEnabled: true 

---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-green
spec:
  selector:
    app: rollout-bluegreen-green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-bluegreen-green
spec:
  rules:
  - host: green.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rollout-bluegreen-green
            port:
              number: 80
